# andmx

./: .gitignore  AGENTS.md  CONTRIBUTING.md  OPTIMIZATION_ROADMAP.md  PROGRESS.md  README.md  UI2_README.md  gradle.properties  settings.gradle.kts
.codebuddy/plans/: infra-deep-reverse-engineering_d8d3b026.md
.codebuddy/teams/_auto_17490499b38e4dae88df87fb46c340eb/: config.json
.codebuddy/teams/_auto_17490499b38e4dae88df87fb46c340eb/inboxes/: team-lead.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/andmx-marketplace/: catalog.json  known_marketplaces.json
app/src/main/assets/andmx-plugins/andmx-android-dev/: .mcp.json
app/src/main/assets/andmx-plugins/andmx-android-dev/.andmx-plugin/: plugin.json
app/src/main/assets/andmx-plugins/andmx-dev-forge/: .mcp.json
app/src/main/assets/andmx-plugins/andmx-html-video/: .mcp.json
app/src/main/assets/andmx-plugins/andmx-storage-cleanup/: .mcp.json
app/src/main/cpp/: CMakeLists.txt  pty.c
app/src/main/java/com/andmx/: AndmxApp.kt  MainActivity.kt
app/src/main/java/com/andmx/agent/: AgentEngine.kt  Tool.kt  (+26 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
docs/: week1_summary.md  week2_summary.md  week3_summary.md  zcode_agent_alignment.md  zcode_analysis.md
gradle/: libs.versions.toml
native/: probe.c
tools/: mock_llm_server.py
(+322 files in other folders)
